<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="8dp"
               android:padding="6dp"
               app:cardElevation="@dimen/cardview_default_elevation">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/first_img"
                       android:contentDescription="TODO" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:padding="8dp"
                       android:text="@string/ALC"
                       android:gravity="center"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:text="@string/first_writeup"
                       android:paddingLeft="16dp"
                       android:paddingRight="16dp"/>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:paddingBottom="8dp"
                       android:paddingLeft="16dp"
                       android:layout_marginTop="8dp"
                       android:paddingRight="16dp">

                       <TextView
                           android:id="@+id/read"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textSize="16sp"
                           android:textStyle="bold"
                           android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                           android:textAllCaps="true"
                           android:drawablePadding="8dp"
                           android:text="@string/read"/>

                       <Button
                           android:id="@+id/about"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_alignParentEnd="true"
                           android:elevation="4dp"
                           android:textColor="@color/colorAccent"
                           android:padding="8dp"
                           android:background="@drawable/button_background"
                           android:text="@string/about"
                           android:textSize="16sp" />

                   </RelativeLayout>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="8dp"
               android:padding="6dp"
               app:cardElevation="@dimen/cardview_default_elevation">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/image_2"
                       android:scaleType="centerCrop"
                       android:contentDescription="TODO" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textStyle="bold"
                       android:padding="8dp"
                       android:text="@string/working_together"
                       android:gravity="center"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:text="@string/second_writeup"
                       android:paddingLeft="16dp"
                       android:paddingRight="16dp"/>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:paddingBottom="8dp"
                       android:paddingLeft="16dp"
                       android:layout_marginTop="8dp"
                       android:paddingRight="16dp">

                       <TextView
                           android:id="@+id/prof_intro"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textSize="16sp"
                           android:textStyle="bold"
                           android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                           android:textAllCaps="true"
                           android:drawablePadding="8dp"
                           android:text="@string/profile"/>

                       <Button
                           android:id="@+id/profile"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:elevation="4dp"
                           android:textColor="@color/colorAccent"
                           android:padding="8dp"
                           android:layout_alignParentEnd="true"
                           android:background="@drawable/button_background"
                           android:text="@string/my_profile"
                           android:textSize="16sp" />

                   </RelativeLayout>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

       </LinearLayout>
    </ScrollView>

</LinearLayout>